# DarkForest

./: CMakeLists.txt  main.cpp
Civilization/: Civilization.cpp  Civilization.h
Color/: Color.h
CycleActions/: CivilizationGeneration.cpp  CivilizationGeneration.h  CivilizationGrowth.cpp  CivilizationGrowth.h  CycleAction.cpp  CycleAction.h
DataTypes/: Vector2D.h
Frontend/: Drawer.cpp  Drawer.h
Tools/: Logger.cpp  Logger.h  Randomizer.cpp  Randomizer.h
Universe/: Universe.cpp  Universe.h
Void/: Void.h
